cluster/prod/traefik-ingress/routes/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-dashboard
  namespace: traefik-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.infra.hortafcul.pt`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: hortafcul-tls
